@@ -74,16 +74,16 @@ WriteMakefile
    #'LD' => $Config{'ld'} == $Config{'cc'} ? 'gcc -std=gnu99' : $Config{'ld'},
 
    # Linker flags for building an executable
-   'LDFLAGS' =>  "-L../magick/.libs -lMagickCore -L../wand/.libs -lMagickWand $Config{'ldflags'} -lfreetype",
+   'LDFLAGS' =>  "-L../magick/.libs -lMagickCore $Config{'ldflags'} -lfreetype",
 
    # Linker flags for building a dynamically loadable module
-   'LDDLFLAGS' => "-L../magick/.libs -lMagickCore -L../wand/.libs -lMagickWand $Config{'lddlflags'} -lfreetype",
+   'LDDLFLAGS' => "-L../magick/.libs -lMagickCore $Config{'lddlflags'} -lfreetype",
 
    # Install PerlMagick binary into ImageMagick bin directory
    'INSTALLBIN'	=> '/usr/local/bin',
 
    # Library specification
-   'LIBS' => [ '-L../magick/.libs -lMagickCore -L../wand/.libs -lMagickWand -lperl -lm' ],
+   'LIBS' => [ '-L../magick/.libs -lMagickCore -L../wand/.libs -lperl -lm' ],
 
    # Perl binary name (if a Perl binary is built)
    'MAP_TARGET'	=> 'PerlMagick',
